...
        }) {
            Text(self.val)
        }
        .padding(.horizontal, 20)
        .padding(.vertical, 5)
        .foregroundColor(Color.white)
        .accessibility(identifier: "JADropdownOptionElementId")
    }
}

struct JADropdown: View {
    var options: [JADropdownOption]
    var onSelect: ((_ key: String) -> Void)?
...
                    .foregroundColor(Color.blue)
                Spacer()
                    .frame(width: 20)
                Image(systemName: self.shouldShowDropdown ? "chevron.up" : "chevron.down")
            }
        }
        .accessibility(identifier: "JADropdownButtonId")
        .padding(.horizontal)
        .cornerRadius(5)
        .frame(height: self.buttonHeight)
        .overlay(
            RoundedRectangle(cornerRadius: 5)
                .stroke(Color.black, lineWidth: 1)
...
