...
                       })
                .frame(width: 100.0, height: 100.0)
                .clipShape(Circle())
            // Music name view
            HStack {
                Text("Music\t\t\t: \(music.name())")
                    .accessibility(identifier: "JAMusicDetailsViewNameLabelId")
                Spacer(minLength: 16)
            }
            // Music name view
            HStack {
                Text("Url\t\t\t\t:")
                Text("\(music.url())")
...
