...
                        Button(action: {
                            self.dataSource.removeAll()
                            JAMusicSearchManager.sharedInstance.search(method: method, keyword: keyword) { data in
                                self.dataSource.append(contentsOf: data)
                            }
                        }, label: {
                            Text("Search")
                        })
                        .frame(width: 100.0, height: 40.0)
                        .font(.headline)
                        .background(Color.blue)
                        .foregroundColor(.white)
                        .accessibility(identifier: "SearchButtonId")
...
